# test-template2

./: .copier-answers.yml  .gitignore  LICENSE  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile
docs/source/: api.rst  conf.py  faq.rst  index.rst  installation.rst  quick_start.rst  tutorials.rst
examples/: hello.ipynb
src/testpackage/: __init__.py  hello.py
tests/: test_hello.py
